Closes #197 - added DatabaseService enum for integration